--- a/recipes/peanutbuttercookies.html
+++ b/recipes/peanutbuttercookies.html
@@ -3,17 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Peanut Butter Cookies</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
-        <h1>Peanut Butter Chocolate Chip Cookies</h1>
-        <img src="./pbcookies1.png" alt="Peanut Butter Cookies Finished Product.">
+    <body id="body">
+        <h1 id="header">Peanut Butter Chocolate Chip Cookies</h1>
+        <img src="./pbcookies1.png" alt="Peanut Butter Cookies Finished Product." class="img1">
 
-        <h3>Description:</h3>
-        <p>Peanut Butter Chocolate Chip Cookies are big, thick, chewy, and soft and <strong>loaded</strong> with peanut butter and chocolate flavor. They are <strong>outrageously</strong> good!</p>
-        <p>These cookies can be served at a gathering or just for the family. <strong>NOTE:</strong> Please be mindful to people that are allergic to peanut butter.</p>
+        <h3 class="titles">Description:</h3>
+        <p class="content">Peanut Butter Chocolate Chip Cookies are big, thick, chewy, and soft and <strong>loaded</strong> with peanut butter and chocolate flavor. They are <strong>outrageously</strong> good!</p>
+        <p class="content">These cookies can be served at a gathering or just for the family. <strong>NOTE:</strong> Please be mindful to people that are allergic to peanut butter.</p>
 
-        <h3>Ingredients:</h3>
-        <ul>
+        <h3 class="titles">Ingredients:</h3>
+        <div class="content">
+        <ul class="content list">
             <li>1 cup packed brown sugar</li>
             <li>1/2 cup white sugar</li>
             <li>1/2 cup butter, softened</li>
@@ -27,15 +29,17 @@
             <li>1/2 teaspoon salt</li>
             <li>2 cups chopped semisweet chocolate</li>
         </ul>
-
-        <h3>Steps / Directions:</h3>
-        <ol>
+        </div>
+        <h3 class="titles">Steps / Directions:</h3>
+        <div class="content">
+        <ol class="content list">
             <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
             <li>Cream sugars, butter, and peanut butter in a large bowl until smooth. Beat in eggs one at a time, then stir in corn syrup, water, and vanilla. Combine flour, baking soda, and salt in a seperate bowl; stir into peanut butter mixture. Fold in chocolate chunks.</li>
             <li>Scoop 1/4-cup portions of dough 3-inches apart onto ungreased baking sheets.</li>
             <li>Bake in the preheated oven until edges are golden, 12 to 14 minutes. Allow cookies to cool for 1 minute before transferring to wire racks.</li>
         </ol>
+        </div>
 
-        <a href="../index.html">Return to homepage</a>
+        <a href="../index.html" class="content return">Return to homepage</a>
     </body>
 </html>
